force-app/main/default/objects/Assessment_of_Response__c/Assessment_of_Response__c.object-meta.xml
<CustomObject>
    <label>Assessment</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Assessment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>