force-app/main/default/objects/Assessment_of_Response__c/fields/Assessment_of_Response__c.field-meta.xml
<CustomField>
    <fullName>Assessment_of_Response__c</fullName>
    <label>Assessment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>