force-app/main/default/objects/Assessment_of_Response__c/fields/Candidate_s_Relevant_Source_Statement_s__c.field-meta.xml
<CustomField>
    <fullName>Candidate_s_Relevant_Source_Statement_s__c</fullName>
    <label>Relevant Source Statement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>