force-app/main/default/objects/Assessment_of_Response__c/fields/Reason_for_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Feedback__c</fullName>
    <label>Reason for Feedback</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>