force-app/main/default/objects/Assessment_of_Response__c/fields/Relevance_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Relevance_to_Customer__c</fullName>
    <label>Relevance to Customer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>