force-app/main/default/objects/Assessment_of_Response__c/fields/Risk__c.field-meta.xml
<CustomField>
    <fullName>Risk__c</fullName>
    <label>Risk</label>
    <length>255</length>
    <type>Text</type>
</CustomField>