force-app/main/default/objects/Assessment_of_Response__c/fields/Strategy_to_address_Risk__c.field-meta.xml
<CustomField>
    <fullName>Strategy_to_address_Risk__c</fullName>
    <label>Strategy to address Risk</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>