force-app/main/default/objects/Assessment_of_Response__c/fields/Strategy_to_maximize_the_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Strategy_to_maximize_the_Opportunity__c</fullName>
    <label>Strategy to maximize the Opportunity</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>