force-app/main/default/objects/Assessment_of_Response__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Meeting__c</columns>
    <columns>Question__c</columns>
    <columns>Response__c</columns>
    <columns>Assessment_of_Response__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>